--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Articles</h1>
-<p> On equality of solid angles ratio and corresponding volumes ratio(<a href="On equality of solid angles ratio and corresponding volumes ratio(Semen Ahafontsev).pdf">link</a>) </p> 
+<p> On equality of solid angles ratio and corresponding volumes ratio(<a href="On_equality_of_solid_angles_ratio_and_corresponding_volumes_ratio(Semen_Ahafontsev).pdf">link</a>) </p> 
 </body>
 </html>
